# Tauwarp

./: CITATION.cff  README.md  pyproject.toml
Code/src/tauwarp/: __init__.py
examples/: clocks_demo.py  cosmology_demo.py  pulsar_demo.py
sec/: models.py  residuals.py  utils.py  warp.py
tests/: test_models.py  test_warp.py
