[project]
name = "Tauwarp"
version = "0.0.1"
description = "Testing non-linear time via t→τ re-parameterizations across clocks, pulsars, and cosmology."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache 2.0"}
authors = [{name = "<Shawn C. Wright>", email = "<shawnkardin@gmail.com>"}]
dependencies = ["numpy>=1.24", "scipy>=1.11", "pandas>=2.0", "matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/<you>/Tauwarp"

[tool.pytest.ini_options]
addopts = "-q"
